# BearShare

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md  bearshare.db  build-runner.sh  build.sh  restart.sh  teardown.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.build-deploy.yml  rust.yml  test-backend.yml  test-frontend.yml  test-misc.yml
client/: app.js  index.html  rga.js
crates/client/: Cargo.toml  README.md
crates/client/src/: doc.rs  main.rs  secure_channel.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs
crates/rga/: Cargo.toml
crates/rga/examples/: usage.rs
crates/rga/src/: lib.rs  node.rs  remote_op.rs  rga.rs  s4vector.rs
crates/rga/tests/: integration_tests.rs  paper_based_tests.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: database.rs  document.rs  features.rs  file_store.rs  main.rs  messages.rs  room.rs  secure_channel.rs  server.rs
docker/: bearshare-frontend.Dockerfile  bearshare-server.Dockerfile  ci.bearshare-server.Dockerfile  ci.docker-compose.yml  local.docker-compose.yml
docker/ci/: bearshare-frontend.Dockerfile  docker-compose.yml
docker/local/: bearshare-frontend.Dockerfile  docker-compose.yml
docker/runner/: Dockerfile
frontend/: .gitignore  README.md  app.js  index.html  index.html.old  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  legacy-app.ts  main.tsx  styles.css  types.d.ts  vite-env.d.ts
frontend/src/components/: ActivityLog.tsx  ConnectionPanel.tsx  Editor.tsx  RoomPanel.tsx  StatusBar.tsx  VersionList.tsx
frontend/src/hooks/: useEditorChanges.ts  useRouter.ts  useWebSocket.ts
frontend/src/pages/: ConnectPage.tsx  CreateRoomPage.tsx  EditorPage.tsx  JoinRoomPage.tsx  MenuPage.tsx  index.ts
frontend/src/services/: crypto.ts  websocket.ts
frontend/src/styles/: app.css
frontend/src/types/: index.ts
src/: doc.rs  main.rs
