[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
rga = { path = "../rga/" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
