[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.31"
hkdf = "0.12"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
rga = { path = "../rga/" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
x25519-dalek = { version = "2", features = ["getrandom"] }
zeroize = "1.8"
